ci: upgrading to java 25  and spring boot 4 using open rewrite